# cloud-agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  PR_REVIEW_8.md  README.md  SDK_MIGRATION_PLAN.md  SIGKILL_ISSUE.md  TASK_APPLY_PLAN.md  novita.Dockerfile  plan.md  pyproject.toml  start-services.sh  test.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_11_12_1728-97c87cda1d2a_initial_migration_create_tasks_table.py  2025_11_12_1749-002a1a82a8b1_add_repository_url_to_tasks_table.py  2025_11_12_2119-c37109c69038_add_task_logs_table.py  2025_11_14_0539-a4f56fc73d60_add_encrypted_api_keys_to_tasks.py  2025_11_30_0654-e5a994e9efd9_add_session_id_and_branch_name_to_tasks_.py  2025_11_30_2354-042598a75103_remove_branch_name_and_add_parent_task_.py
app/: __init__.py  celery_app.py  cli.py  main.py
app/api/: tasks.py
app/core/: auth.py  config.py  database.py  encryption.py  errors.py
app/models/: __init__.py  task.py  task_log.py
app/services/: __init__.py  agent_execution.py  api_client.py  git.py  sandbox.py  task.py
app/tasks/: __init__.py  agent_execution.py
scripts/: check_message_api.py  integration_test.py  sandbox_agent.py  setup_github_token.sh  setup_test_db.sh  test_agent_sdk.py  test_claude_github.py  test_progressive.py  test_sandbox_basic.py  test_sandbox_resume.py  test_sandbox_streaming.py  test_sandbox_timeout.py  test_sandbox_timeout_simple.py  test_session_resume.py  test_template.py  verify_claude_github.py  verify_template.py
tests/: conftest.py
tests/api/: test_tasks.py
tests/core/: test_encryption.py
tests/services/: test_agent_execution.py  test_api_client.py  test_git.py  test_task.py
